--- a/css/common.css
+++ b/css/common.css
@@ -12,7 +12,7 @@ a:hover {color: #df667e;}
 
 .toysi-blue-bg {background-color: #5ec9d7; color: #ffffff;}
 .toysi-white-bg {background: url(../images/white_bg.jpg) repeat scroll 0 0 #ffffff;}
-.toysi-bottom-box-shadow {box-shadow: rgba();}
+.toysi-bottom-box-shadow {box-shadow: 0 3px 5px rgba(0, 0, 0, 0.20); z-index: 100; position: relative;}
 
 .toysi-title-page {font-size: 24px; color: #ffffff;}
 .toysi-title-page-height {height: 55px;}
