--- a/css/common.css
+++ b/css/common.css
@@ -1,4 +1,4 @@
-body {font-family: Tahoma, Verdana, Arial, Helvetica; background: url(../images/body_bg.png) repeat scroll 0 0 transparent;}
+body {font-family: Tahoma, Verdana, Arial, Helvetica; background: url(../images/body_bg.png) repeat scroll 0 0 transparent; color: #666666;}
 
 a {font-size: 12px; color: #4bb6c4;}
 a:hover {color: #df667e;}
@@ -36,6 +36,10 @@ a:hover {color: #df667e;}
 .toysi-checkbox-control input + label {position: relative; padding-left: 36px;}
 .toysi-checkbox-control input + label:before {content: ""; background: url("../images/sprite.png") no-repeat scroll 0 -20px transparent; display: block; width: 20px; height: 20px; cursor: pointer; position: absolute; top: 0; left: 3px;}
 .toysi-checkbox-control input:checked + label:before {background-position: 0 0;}
+
+.toysi-necessarily {position: relative;}
+.toysi-necessarily .toysi-point {position: absolute; top: 0; right: 5px;}
+.toysi-point {display: inline-block; width: 7px; height: 7px; background-color: #5ec9d7; border-radius: 50% 50% 50% 50%;}
 
 .container {width: 990px;}
 
