--- a/css/common.css
+++ b/css/common.css
@@ -1,6 +1,7 @@
 body {font-family: Tahoma, Verdana, Arial, Helvetica; background: url(../images/body_bg.png) repeat scroll 0 0 transparent; color: #666666;}
 
-a {font-size: 12px; color: #4bb6c4;}
+a,
+a:focus {font-size: 12px; color: #4bb6c4;}
 a:hover {color: #df667e;}
 
 .toysi-dashed {text-decoration: none; border-bottom: 1px dashed;}
