--- a/css/oformlenie_zakaza.css
+++ b/css/oformlenie_zakaza.css
@@ -18,7 +18,7 @@
 .table > tfoot > tr > td:first-child {border: 0;}
 
 .toysi-count-product {height: 24px; margin-top: -12px;}
-.toysi-count-product .toysi-count-inpit {width: 62px; height: 15px; font-size: 10px;}
+.toysi-count-product .toysi-count-input {width: 62px; height: 15px; font-size: 10px;}
 .toysi-count-product .toysi-count-control {display: inline-block; position: relative; width: 12px; height: 24px; cursor: pointer;}
 .toysi-count-product .toysi-count-control:before {content: ""; position: absolute; top: 8px; left: 0; width: 0; height: 0; border-top: 12px solid transparent; border-bottom: 12px solid transparent;}
 .toysi-count-product .toysi-count-control.toysi-count-left:before {border-right: 12px solid #d4da23;}
@@ -27,3 +27,7 @@
 .toysi-remove-product,
 .toysi-remove-product:hover,
 .toysi-remove-product:focus {text-decoration: none; color: #bc2040; cursor: pointer;}
+
+.toysi-top-line table {height: 32px;}
+.toysi-cart-buttton-container {margin-top: 27px; margin-bottom: 38px;}
+.toysi-cart-buttton-container .btn {margin-left: 11px; margin-right: 11px;}
