--- a/css/login.css
+++ b/css/login.css
@@ -8,3 +8,4 @@
 .toysi-login-page-container {margin: 0 0 0 397px;}
 .toysi-login-page-container .form-horizontal {margin-top: 24px;}
 .toysi-login-input-width {width: 190px;}
+.toysi-title-link {margin-right: 373px;}
