--- a/css/common.css
+++ b/css/common.css
@@ -1,14 +1,14 @@
 body {font-family: Tahoma, Verdana, Arial, Helvetica; background: url(../images/body_bg.png) repeat scroll 0 0 transparent; color: #666666;}
 
 a,
-a:focus {font-size: 12px; color: #4bb6c4;}
+a:focus {font-size: 12px; color: #4bb6c4; cursor: pointer;}
 a:hover {color: #df667e;}
 
 .toysi-blue-bg a,
 .toysi-blue-bg a:focus {color: #ffffff;}
 
 .toysi-title-link,
-.toysi-title-link:focus {font-size: 14px; margin-top: 22px; text-decoration: underline;}
+.toysi-title-link:focus {font-size: 14px; margin-top: 20px; text-decoration: underline;}
 
 .toysi-dashed {text-decoration: none; border-bottom: 1px dashed;}
 .toysi-dashed:hover {text-decoration: none;}
@@ -33,6 +33,8 @@ a:hover {color: #df667e;}
 .toysi-btn-red:focus,
 .toysi-btn-red:active {background-color: #d52e50; color: #ffffff;}
 
+.toysi-btn-small {font-size: 12px; padding: 3px 15px 4px;}
+
 .toysi-pull-left {margin-left: 30px;}
 .toysi-password-reset-container .row,
 .form-horizontal .toysi-form-group {margin-left: 0;}
@@ -56,6 +58,28 @@ a:hover {color: #df667e;}
 
 .toysi-top-line {border-top: 1px solid #c9c9c9;}
 
+.toysi-nav-head {background-color: #44a7b4; height: 41px;}
+.toysi-nav-head .toysi-nav {list-style: none; margin-top: 7px; margin-bottom: 6px; padding: 0;}
+.toysi-nav-head .toysi-nav li {float: left; margin-left: 16px;}
+.toysi-nav-head .toysi-nav li:first-child {margin-left: 0;}
+.toysi-nav-head .toysi-nav li a {color: #ffffff; display: inline-block; padding: 0 9px; cursor: pointer; height: 26px; line-height: 26px; text-decoration: none;}
+.toysi-nav-head .toysi-nav li.active a,
+.toysi-nav-head .toysi-nav li a:hover {background-color: #ffffff; color: #44a7b4;}
+
+.toysi-head-phones {position: relative; margin-top: 6px; margin-left: 10px;}
+.toysi-head-phones ul {list-style: none; position: absolute; width: 138px; padding: 0 0 0 8px; color: #ffffff; cursor: pointer; height: 26px; overflow: hidden;}
+.toysi-head-phones ul:before {content: ""; width: 0; height: 0; border-left: 8px solid transparent; border-right: 8px solid transparent; border-top: 8px solid #d4da23; position: absolute; top: 9px; right: 6px;}
+.toysi-head-phones ul li {line-height: 26px; font-size: 12px; padding: 0; word-spacing: -1px;}
+.toysi-head-phones ul.open,
+.toysi-head-phones ul:hover {background-color: #ffffff; height: 78px; color: #454545;}
+.toysi-head-phones ul:hover:before {border-bottom: 8px solid #5ec9d7; border-top: 0;}
+
+.toysi-user-container {margin-top: 8px;}
+
+.toysi-user-login a,
+.toysi-user-login a:focus {color: #ffffff; text-decoration: underline; margin-left: 12px;}
+.toysi-user-login a:hover {text-decoration: none;}
+
 .toysi-footer {height: 76px; font-size: 12px; line-height: 74px;}
 
 .toysi-footer .toysi-nav {list-style: none; margin-left: 32px;}
@@ -64,3 +88,5 @@ a:hover {color: #df667e;}
 .toysi-footer .toysi-nav li.active a,
 .toysi-footer .toysi-nav li a:hover {background-color: #ffffff; color: #5ec9d7;}
 .toysi-footer .toysi-footer-contact {line-height: 14px; margin-top: 16px; margin-left: 54px;}
+
+.toysi-text-danger {color: #bc2040;}
