--- a/css/common.css
+++ b/css/common.css
@@ -18,7 +18,7 @@ a:hover {color: #df667e;}
 .toysi-margin-logo-center {margin: 31px 0 26px 0; display: inline-block; outline: none;}
 
 .toysi-blue-bg {background-color: #5ec9d7; color: #ffffff;}
-.toysi-white-bg {background: url(../images/white_bg.jpg) repeat scroll 0 0 #ffffff;}
+.toysi-white-bg {background: url(../images/white_bg.jpg) repeat scroll 0 0 #ffffff; position: relative;}
 .toysi-bottom-box-shadow {box-shadow: 0 3px 5px rgba(0, 0, 0, 0.20); z-index: 100; position: relative;}
 
 .toysi-title-page {font-size: 24px; color: #ffffff;}
@@ -26,6 +26,37 @@ a:hover {color: #df667e;}
 .toysi-title-page-height .toysi-title-page {line-height: 52px; margin-top: 0; margin-bottom: 0;}
 
 .toysi-form-control {border-radius: 0; border-color: #c9c9c9; color: #8b8b8b;}
+
+.toysi-left-nav {width: 245px;}
+
+.toysi-logo {height: 131px; line-height: 131px; text-align: center; width: 100%; display: inline-block;}
+.toysi-logo-text {background-color: #5ec9d7; color: #ffffff; padding: 7px 0 11px 24px;}
+
+.toysi-search-control {width: 191px; margin: 10px auto 0 auto;}
+.toysi-search-control .form-control {height: 30px; border-right: 0; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1) inset;}
+.toysi-search-control .form-control:focus {box-shadow: none; border-color: #cccccc;}
+.toysi-search-control .btn {padding: 4px 12px; background-image: none; border-left: 0; margin-top: -2px; box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1) inset;  border-color: #cccccc; color: #63666b;}
+.toysi-search-control .btn:focus,
+.toysi-search-control .btn:hover {background-color: #ffffff; box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1) inset; border-left: 0;}
+
+.toysi-nav-container {border-top: 5px solid #5ec9d7;}
+
+.toysi-nav-container ul {list-style: none; padding: 0;}
+.toysi-nav-container ul li ul {display: none;}
+.toysi-nav-container ul li.toysi-open ul {display: block;}
+.toysi-group {position: relative; z-index: 0;}
+.toysi-group:before {content: ""; display: block; position: absolute; width: 0; height: 0; border-top: 6px solid transparent; border-left: 8px solid #5ec9d7; border-bottom: 6px solid transparent; top: 6px; left: 8px;}
+.toysi-open.toysi-group:before {width: 0; height: 0; border-left: 6px solid transparent; border-right: 6px solid transparent; border-top: 8px solid #5ec9d7; border-bottom: 0; top: 8px;}
+
+.toysi-nav-container ul li a {line-height: 24px; color: #666666; text-decoration: none; white-space: nowrap; text-overflow: ellipsis; overflow: hidden; display: block; padding-right: 10px; padding-left: 24px;}
+.toysi-nav-container ul li ul li a {padding-left: 44px;}
+.toysi-nav-container ul li a:hover {background-color: #edeed3;}
+
+.toysi-nav-container ul li.toysi-open > a {background-color: #edeed3; font-weight: bold; color: #be2746;}
+.toysi-nav-container ul li.toysi-open ul li.active a {font-weight: bold; color: #be2746; background-color: #d4da23;}
+
+.toysi-content-relative {width: 745px; height: 100%;}
+.toysi-content {width: 745px; background-color: #e8e8e8; box-shadow: 3px 0 5px rgba(0, 0, 0, 0.20), -3px 0 5px rgba(0, 0, 0, 0.20); position: absolute; height: 100%; z-index: 10;}
 
 .toysi-btn {font-size: 24px; border-radius: 0; padding: 4px 20px 5px;}
 .toysi-btn-red {background-color: #bc2040; color: #ffffff;}
@@ -52,22 +83,22 @@ a:hover {color: #df667e;}
 .has-error .form-control {border-color: #bc2040; color: #bc2040; background-color: rgba(188, 32, 64, 0.11);}
 .has-error .toysi-point {background-color: #bc2040;}
 
-.container {width: 990px;}
+.container {width: 1020px;}
 
 .toysi-height-5px {height: 5px;}
 
 .toysi-top-line {border-top: 1px solid #c9c9c9;}
 
-.toysi-nav-head {background-color: #44a7b4; height: 41px;}
+.toysi-nav-head {background-color: #44a7b4; height: 41px; position: relative; z-index: 100;}
 .toysi-nav-head .toysi-nav {list-style: none; margin-top: 7px; margin-bottom: 6px; padding: 0;}
-.toysi-nav-head .toysi-nav li {float: left; margin-left: 16px;}
+.toysi-nav-head .toysi-nav li {float: left; margin-left: 4px;}
 .toysi-nav-head .toysi-nav li:first-child {margin-left: 0;}
-.toysi-nav-head .toysi-nav li a {color: #ffffff; display: inline-block; padding: 0 9px; cursor: pointer; height: 26px; line-height: 26px; text-decoration: none;}
+.toysi-nav-head .toysi-nav li a {color: #ffffff; display: inline-block; padding: 0 6px; cursor: pointer; height: 26px; line-height: 26px; text-decoration: none;}
 .toysi-nav-head .toysi-nav li.active a,
 .toysi-nav-head .toysi-nav li a:hover {background-color: #ffffff; color: #44a7b4;}
 
 .toysi-head-phones {position: relative; margin-top: 6px; margin-left: 10px;}
-.toysi-head-phones ul {list-style: none; position: absolute; width: 138px; padding: 0 0 0 8px; color: #ffffff; cursor: pointer; height: 26px; overflow: hidden;}
+.toysi-head-phones ul {list-style: none; position: absolute; width: 138px; padding: 0 0 0 8px; color: #ffffff; cursor: pointer; height: 26px; overflow: hidden; z-index: 1000;}
 .toysi-head-phones ul:before {content: ""; width: 0; height: 0; border-left: 8px solid transparent; border-right: 8px solid transparent; border-top: 8px solid #d4da23; position: absolute; top: 9px; right: 6px;}
 .toysi-head-phones ul li {line-height: 26px; font-size: 12px; padding: 0; word-spacing: -1px;}
 .toysi-head-phones ul.open,
@@ -76,11 +107,25 @@ a:hover {color: #df667e;}
 
 .toysi-user-container {margin-top: 8px;}
 
+.toysi-user-joined {font-size: 12px; color: #be2746;}
+.toysi-user-joined a {color: #ffffff;}
+.toysi-personal-account {position: relative; padding-left: 30px; text-decoration: underline;}
+.toysi-personal-account:before {content: ""; display: inline-block; width: 22px; height: 18px; background: url(../images/sprite.png) no-repeat -40px 0; position: absolute; top: 0; left: 0;}
+.toysi-personal-account:hover:before {background-position: -40px -18px;}
+
+.toysi-user-joined .toysi-cart {position: relative; padding-left: 30px; text-decoration: underline; color: #be2746;}
+.toysi-cart:before {content: ""; display: inline-block; width: 20px; height: 18px; background: url(../images/sprite.png) no-repeat -20px 0; position: absolute; top: 0; left: 0;}
+.toysi-cart:hover:before {background-position: -20px -18px;}
+
+.toysi-exit-account {margin-left: 15px; margin-right: 15px;}
+
+.toysi-quantity {margin-right: 5px;}
+
 .toysi-user-login a,
 .toysi-user-login a:focus {color: #ffffff; text-decoration: underline; margin-left: 12px;}
 .toysi-user-login a:hover {text-decoration: none;}
 
-.toysi-footer {height: 76px; font-size: 12px; line-height: 74px;}
+.toysi-footer {height: 76px; font-size: 12px; line-height: 74px; position: relative; z-index: 100;}
 
 .toysi-footer .toysi-nav {list-style: none; margin-left: 32px;}
 .toysi-footer .toysi-nav li {float: left; margin-left: 16px;}
