--- a/css/common.css
+++ b/css/common.css
@@ -1,7 +1,7 @@
 body {font-family: Tahoma, Verdana, Arial, Helvetica; background: url(../images/body_bg.png) repeat scroll 0 0 transparent; color: #666666;}
 
 a,
-a:focus {font-size: 12px; color: #4bb6c4; cursor: pointer;}
+a:focus {font-size: 12px; color: #4bb6c4; cursor: pointer; outline: none;}
 a:hover {color: #df667e;}
 
 .toysi-blue-bg a,
@@ -45,19 +45,19 @@ a:hover {color: #df667e;}
 .toysi-nav-container ul li ul {display: none;}
 .toysi-nav-container ul li.toysi-open ul {display: block;}
 .toysi-group {position: relative; z-index: 0;}
-.toysi-group:before {content: ""; display: block; position: absolute; width: 0; height: 0; border-top: 6px solid transparent; border-left: 8px solid #5ec9d7; border-bottom: 6px solid transparent; top: 6px; left: 8px;}
+.toysi-group:before {content: ""; display: block; position: absolute; width: 0; height: 0; border-top: 6px solid transparent; border-left: 8px solid #5ec9d7; border-bottom: 6px solid transparent; top: 6px; left: 8px; z-index: 1;}
 .toysi-open.toysi-group:before {width: 0; height: 0; border-left: 6px solid transparent; border-right: 6px solid transparent; border-top: 8px solid #5ec9d7; border-bottom: 0; top: 8px;}
 
-.toysi-nav-container ul li a {line-height: 24px; color: #666666; text-decoration: none; white-space: nowrap; text-overflow: ellipsis; overflow: hidden; display: block; padding-right: 10px; padding-left: 24px;}
+.toysi-nav-container ul li a {line-height: 24px; color: #666666; text-decoration: none; white-space: nowrap; text-overflow: ellipsis; overflow: hidden; display: block; padding-right: 10px; padding-left: 24px; position: relative; z-index: 0;}
 .toysi-nav-container ul li ul li a {padding-left: 44px;}
-.toysi-nav-container ul li a:hover {background-color: #edeed3;}
+.toysi-nav-container ul li a:hover {background-color: #edeed3; box-shadow: inset -3px 0 0 rgba(0, 0, 0, 0.10);}
 
-.toysi-nav-container ul li.toysi-open > a {background-color: #edeed3; font-weight: bold; color: #be2746;}
-.toysi-nav-container ul li.toysi-open ul li.active a {font-weight: bold; color: #be2746; background-color: #d4da23;}
+.toysi-nav-container ul li.toysi-open > a {background-color: #edeed3; font-weight: bold; color: #be2746; box-shadow: inset -3px 0 0 rgba(0, 0, 0, 0.10);}
+.toysi-nav-container ul li.toysi-open ul li.active a {font-weight: bold; color: #be2746; background-color: #d4da23; box-shadow: inset -3px 0 0 rgba(0, 0, 0, 0.10);}
 
 .toysi-content-relative {width: 745px; height: 100%;}
-.toysi-bg-content {background-color: #e8e8e8; width: 745px; position: absolute; height: 100%;}
-.toysi-content {width: 745px; box-shadow: 3px 0 5px rgba(0, 0, 0, 0.20), -3px 0 5px rgba(0, 0, 0, 0.20); position: relative; z-index: 11;}
+.toysi-bg-content {background-color: #e8e8e8; width: 745px; position: absolute; height: 100%;  box-shadow: 3px 0 5px rgba(0, 0, 0, 0.20), -3px 0 5px rgba(0, 0, 0, 0.20);}
+.toysi-content {width: 745px; position: relative; z-index: 11;}
 
 
 .toysi-product-list-container {margin: 0 1px 0 0; clear: both;}
@@ -170,7 +170,7 @@ a:hover {color: #df667e;}
 .toysi-user-login a:focus {color: #ffffff; text-decoration: underline; margin-left: 12px;}
 .toysi-user-login a:hover {text-decoration: none;}
 
-.toysi-footer {height: 76px; font-size: 12px; line-height: 74px; position: relative; z-index: 100;}
+.toysi-footer {height: 76px; font-size: 12px; line-height: 74px; position: relative; z-index: 10;}
 
 .toysi-footer .toysi-nav {list-style: none; margin-left: 32px;}
 .toysi-footer .toysi-nav li {float: left; margin-left: 16px;}
@@ -180,3 +180,9 @@ a:hover {color: #df667e;}
 .toysi-footer .toysi-footer-contact {line-height: 14px; margin-top: 16px; margin-left: 54px;}
 
 .toysi-text-danger {color: #bc2040;}
+
+.toysi-breadcrumb {position: relative; z-index: 10; margin: 12px 12px 0 12px;}
+.toysi-breadcrumb .breadcrumb {background-color: #ffffff; border-radius: 0; margin-bottom: 0;}
+.toysi-breadcrumb .breadcrumb > li {font-size: 12px;}
+.toysi-breadcrumb .breadcrumb > li + li:before {content: "— "; color: #666666;}
+.toysi-breadcrumb .breadcrumb > li a {text-decoration: underline;}
